--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "platinum",
-  "version": "2.0.0",
+  "name": "not_platinum",
+  "version": "4.2.0",
   "description": "Super cool Discord bot.",
   "main": "index.js",
   "scripts": {
